--- a/index.html
+++ b/index.html
@@ -254,13 +254,31 @@
                                 <div class="project-item">
                                     <img src="img/interior/living5.jpg" alt="Living room 5" class="project-image">
                                 </div>
+                                <div class="project-item">
+                                    <img src="img/interior/living6.jpg" alt="Living room 6" class="project-image">
+                                </div>
+                                <div class="project-item">
+                                    <img src="img/interior/living7.jpg" alt="Living room 7" class="project-image">
+                                </div>
+                                <div class="project-item">
+                                    <img src="img/interior/living8.jpg" alt="Living room 8" class="project-image">
+                                </div>
+                                <div class="project-item">
+                                    <img src="img/interior/living9.jpg" alt="Living room 9" class="project-image">
+                                </div>
+                                <div class="project-item">
+                                    <img src="img/interior/living10.jpg" alt="Living room 10" class="project-image">
+                                </div>
+                                <div class="project-item">
+                                    <img src="img/interior/living11.jpg" alt="Living room 11" class="project-image">
+                                </div>
                             </div>
                         </div>
-                        <div class="projects-navigation">
-                            <button class="project-nav-arrow project-prev">
+                        <div class="projects-navigation living-nav">
+                            <button class="project-nav-arrow project-prev living-prev">
                                 <img src="img/leftarr.svg" alt="arrow-left">
                             </button>
-                            <button class="project-nav-arrow project-next">
+                            <button class="project-nav-arrow project-next living-next">
                                 <img src="img/rightarr.svg" alt="arrow-right">
                             </button>
                         </div>
@@ -287,13 +305,34 @@
                                 <div class="project-item">
                                     <img src="img/interior/bedroom5.jpg" alt="Bedroom 5" class="project-image">
                                 </div>
+                                <div class="project-item">
+                                    <img src="img/interior/bedroom6.jpg" alt="Bedroom 6" class="project-image">
+                                </div>
+                                <div class="project-item">
+                                    <img src="img/interior/bedroom7.jpg" alt="Bedroom 7" class="project-image">
+                                </div>
+                                <div class="project-item">
+                                    <img src="img/interior/bedroom8.jpg" alt="Bedroom 8" class="project-image">
+                                </div>
+                                <div class="project-item">
+                                    <img src="img/interior/bedroom9.jpg" alt="Bedroom 9" class="project-image">
+                                </div>
+                                <div class="project-item">
+                                    <img src="img/interior/bedroom10.jpg" alt="Bedroom 10" class="project-image">
+                                </div>
+                                <div class="project-item">
+                                    <img src="img/interior/bedroom11.jpg" alt="Bedroom 11" class="project-image">
+                                </div>
+                                <div class="project-item">
+                                    <img src="img/interior/bedroom12.jpg" alt="Bedroom 12" class="project-image">
+                                </div>
                             </div>
                         </div>
-                        <div class="projects-navigation">
-                            <button class="project-nav-arrow project-prev">
+                        <div class="projects-navigation bedroom-nav">
+                            <button class="project-nav-arrow project-prev bedroom-prev">
                                 <img src="img/leftarr.svg" alt="arrow-left">
                             </button>
-                            <button class="project-nav-arrow project-next">
+                            <button class="project-nav-arrow project-next bedroom-next">
                                 <img src="img/rightarr.svg" alt="arrow-right">
                             </button>
                         </div>
@@ -322,15 +361,56 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="projects-navigation">
-                            <button class="project-nav-arrow project-prev">
+                        <div class="projects-navigation bathroom-nav">
+                            <button class="project-nav-arrow project-prev bathroom-prev">
                                 <img src="img/leftarr.svg" alt="arrow-left">
                             </button>
-                            <button class="project-nav-arrow project-next">
+                            <button class="project-nav-arrow project-next bathroom-next">
                                 <img src="img/rightarr.svg" alt="arrow-right">
                             </button>
                         </div>
                     </div>
+                </div>
+            </section>
+            <section class="section-7" id="location">
+                <h2 class="section-7-title">LOCATION</h2>
+                <div class="location-content">
+                    <ul class="location-list">
+                        <li class="location-item">
+                            <img src="img/alarab.svg" alt="Burj Al Arab" class="location-icon">
+                            <div>
+                                <div class="location-time">25 mins</div>
+                                <div class="location-name">Burj Al Arab</div>
+                            </div>
+                        </li>
+                        <li class="location-item">
+                            <img src="img/dmall.svg" alt="Dubai Mall" class="location-icon">
+                            <div>
+                                <div class="location-time">20 mins</div>
+                                <div class="location-name">Dubai Mall</div>
+                            </div>
+                        </li>
+                        <li class="location-item">
+                            <img src="img/khalifa.svg" alt="The Burj Khalifa" class="location-icon">
+                            <div>
+                                <div class="location-time">20 mins</div>
+                                <div class="location-name">The Burj Khalifa</div>
+                            </div>
+                        </li>
+                        <li class="location-item">
+                            <img src="img/airport.svg" alt="Dubai Airport" class="location-icon">
+                            <div>
+                                <div class="location-time">10 mins</div>
+                                <div class="location-name">Dubai Airport</div>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="location-map">
+                        <img src="img/footer.png" alt="Dubai Islands Map" />
+                    </div>
+                </div>
+                <div class="location-button">
+                    <button class="google-maps-btn">OPEN IN GOOGLE MAPS</button>
                 </div>
             </section>
             <section class="section-2">
@@ -413,91 +493,6 @@
                             <p class="text-sub">project</p>
                         </div>
                     </div>
-                </div>
-            </section>
-            <section class="section-4" id="amenities">
-                <div class="section-4-content">
-                    <div class="section-4-header">
-                        <h2 class="section-4-title">AMENITIES</h2>
-                    </div>
-                    <div class="amenities-gallery">
-                        <div class="amenities-slider">
-                            <div class="amenities-track">
-                                <div class="amenity-item">
-                                    <img src="img/pool.png" alt="Pool" class="amenity-image">
-                                    <h3 class="amenity-title">POOL</h3>
-                                </div>
-                                <div class="amenity-item">
-                                    <img src="img/gym.png" alt="Gym" class="amenity-image">
-                                    <h3 class="amenity-title">GYM</h3>
-                                </div>
-                                <div class="amenity-item">
-                                    <img src="img/playground.png" alt="Playground" class="amenity-image">
-                                    <h3 class="amenity-title">PLAYGROUND</h3>
-                                </div>
-                                <div class="amenity-item">
-                                    <img src="img/court.png" alt="Paddle Court" class="amenity-image">
-                                    <h3 class="amenity-title">PADDLE COURT</h3>
-                                </div>
-                                </div>
-                            </div>
-                            <div class="slider-indicators amenities-indicators">
-                                <div class="indicator active" data-slide="0"></div>
-                                <div class="indicator" data-slide="1"></div>
-                                <div class="indicator" data-slide="2"></div>
-                                <div class="indicator" data-slide="3"></div>
-                            </div>
-                        </div>
-                        <!-- <div class="amenities-navigation">
-                            <button class="amenity-nav-arrow amenity-prev">
-                                <img src="img/leftarr.svg" alt="arrow-left">
-                            </button>
-                            <button class="amenity-nav-arrow amenity-next">
-                                <img src="img/rightarr.svg" alt="arrow-right">
-                            </button>
-                        </div> -->
-                    </div>
-                </div>
-                        </section>
-            <section class="section-7" id="location">
-                <h2 class="section-7-title">LOCATION</h2>
-                <div class="location-content">
-                    <ul class="location-list">
-                        <li class="location-item">
-                            <img src="img/alarab.svg" alt="Burj Al Arab" class="location-icon">
-                            <div>
-                                <div class="location-time">25 mins</div>
-                                <div class="location-name">Burj Al Arab</div>
-                            </div>
-                        </li>
-                        <li class="location-item">
-                            <img src="img/dmall.svg" alt="Dubai Mall" class="location-icon">
-                            <div>
-                                <div class="location-time">20 mins</div>
-                                <div class="location-name">Dubai Mall</div>
-                            </div>
-                        </li>
-                        <li class="location-item">
-                            <img src="img/khalifa.svg" alt="The Burj Khalifa" class="location-icon">
-                            <div>
-                                <div class="location-time">20 mins</div>
-                                <div class="location-name">The Burj Khalifa</div>
-                            </div>
-                        </li>
-                        <li class="location-item">
-                            <img src="img/airport.svg" alt="Dubai Airport" class="location-icon">
-                            <div>
-                                <div class="location-time">10 mins</div>
-                                <div class="location-name">Dubai Airport</div>
-                            </div>
-                        </li>
-                    </ul>
-                    <div class="location-map">
-                        <img src="img/footer.png" alt="Dubai Islands Map" />
-                    </div>
-                </div>
-                <div class="location-button">
-                    <button class="google-maps-btn">OPEN IN GOOGLE MAPS</button>
                 </div>
             </section>
             <section class="section-5">
