--- a/index.html
+++ b/index.html
@@ -413,6 +413,27 @@
                     <button class="google-maps-btn">OPEN IN GOOGLE MAPS</button>
                 </div>
             </section>
+            <section class="section-future">
+                <div class="future-header">
+                    <h2 class="future-title">DUBAI ISLANDS — THE NEXT</h2>
+                    <p class="future-subtitle">icon of Dubai</p>
+                    <p class="future-text"><span class="future-text-bold">Dubai Islands</span> — luxurious 73-square-kilometer waterfront development by Nakheel Properties, the creator of Dubai's Palm Islands. This exclusive destination redefines the urban seascape designed for connected living, from a vibrant waterfront lifestyle and marina to premium beachfront living, championship golf courses, and ultra-luxury villas.</p>
+                </div>
+                <div class="future-image">
+                    <img src="img/future.png" alt="Dubai Islands future" />
+                </div>
+                <div class="future-stats">
+                    <div class="future-stat"><span class="num">9</span><span class="label">Exclusive marinas</span></div>
+                    <div class="info-divider"></div>
+                    <div class="future-stat"><span class="num">40 km</span><span class="label">of new coastline</span></div>
+                    <div class="info-divider"></div>
+                    <div class="future-stat"><span class="num">Over 80</span><span class="label">World-class hotels and resorts</span></div>
+                    <div class="info-divider"></div>
+                    <div class="future-stat"><span class="num">30,000+</span><span class="label">Residential properties</span></div>
+                    <div class="info-divider"></div>
+                    <div class="future-stat"><span class="num">21km</span><span class="label">of sandy beaches</span></div>
+                </div>
+            </section>
             <section class="section-2">
                 <div class="section-2-content">
                     <div class="section-2-text">
