--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                         </li>
                     </ul>
                     <div class="location-map">
-                        <img src="img/footer.png" alt="Dubai Islands Map" />
+                        <img src="img/mahd.jpg" alt="Dubai Islands Map" />
                     </div>
                 </div>
                 <div class="location-button">
@@ -513,19 +513,6 @@
                             <h3 class="text-main">INTERIOR</h3>
                             <p class="text-sub">project</p>
                         </div>
-                    </div>
-                </div>
-            </section>
-            <section class="section-5">
-                <div class="section-5-content">
-                    <div class="section-5-text">
-                        <h2 class="section-5-title">Cooming soon</h2>
-                    </div>
-                    <div class="section-5-image">
-                        <img src="img/cs.png" alt="Edgewater Residences">
-                    </div>
-                    <div class="section-5-image">
-                        <img src="img/Az_V2_03.png" alt="Edgewater Residences">
                     </div>
                 </div>
             </section>
