--- a/index.html
+++ b/index.html
@@ -434,34 +434,85 @@
                     <div class="future-stat"><span class="num">21km</span><span class="label">of sandy beaches</span></div>
                 </div>
             </section>
-            <section class="section-2">
-                <div class="section-2-content">
-                    <div class="section-2-text">
+            <section class="section-amenities" id="amenities">
+                <div class="amenities-header">
+                    <h2 class="amenities-title">AMENITIES</h2>
+                </div>
+
+                <div class="amenities-icons outdoor">
+                    <ul class="amenities-list cols-5">
+                        <li class="amenity">
+                            <img src="img/amenities/swimming-pool 1.svg" alt="Kids pool" class="amenity-icon">
+                            <span class="amenity-label">KIDS POOL</span>
+                        </li>
+                        <li class="amenity">
+                            <img src="img/amenities/weight 1.svg" alt="Outdoor gym" class="amenity-icon">
+                            <span class="amenity-label">OUTDOOR GYM</span>
+                        </li>
+                        <li class="amenity">
+                            <img src="img/amenities/beach 1.svg" alt="Seating promenade" class="amenity-icon">
+                            <span class="amenity-label">SEATING PROMENADE</span>
+                        </li>
+                        <li class="amenity">
+                            <img src="img/amenities/ping-pong 1.svg" alt="Table tennis" class="amenity-icon">
+                            <span class="amenity-label">TABLE TENNIS</span>
+                        </li>
+                        <li class="amenity">
+                            <img src="img/amenities/yoga-mat 1.svg" alt="Yoga space" class="amenity-icon">
+                            <span class="amenity-label">YOGA SPACE</span>
+                        </li>
+                    </ul>
+                    <ul class="amenities-list cols-5">
+                        <li class="amenity">
+                            <img src="img/amenities/swimming-pool 1.svg" alt="Overflow pool" class="amenity-icon">
+                            <span class="amenity-label">OVERFLOW POOL</span>
+                        </li>
+                        <li class="amenity">
+                            <img src="img/amenities/playground 1.svg" alt="Playground" class="amenity-icon">
+                            <span class="amenity-label">PLAYGROUND</span>
+                        </li>
+                        <li class="amenity">
+                            <img src="img/amenities/running-club 1.svg" alt="Jogging track" class="amenity-icon">
+                            <span class="amenity-label">JOGGING TRACK</span>
+                        </li>
+                        <li class="amenity">
+                            <img src="img/amenities/basketball-field 1.svg" alt="Padel court" class="amenity-icon">
+                            <span class="amenity-label">PADEL COURT</span>
+                        </li>
+                        <li class="amenity">
+                            <img src="img/amenities/volume 1.svg" alt="Quiet zone" class="amenity-icon">
+                            <span class="amenity-label">QUIET ZONE</span>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="amenities-block outdoor">
+                    <div class="amenities-text">
                         <div class="vertical-text">
-                            <h3 class="text-main">EXTERIOR</h3>
-                            <p class="text-sub">project</p>
+                            <h3 class="text-main">OUTDOOR</h3>
+                            <p class="text-sub">spaces</p>
                         </div>
                     </div>
-                    <div class="section-2-slider">
+                    <div class="amenities-slider amenities-outdoor">
                         <div class="slider-container">
                             <div class="slider-track">
-                                <div class="slide active">
-                                    <img src="img/image.png" alt="Edgewater Residences Exterior" class="slider-image">
+                                <div class="slide">
+                                    <img src="img/pool.png" alt="Outdoor amenity 1" class="slider-image">
                                 </div>
                                 <div class="slide">
-                                    <img src="img/image.png" alt="Edgewater Residences Interior" class="slider-image">
+                                    <img src="img/playground.png" alt="Outdoor amenity 2" class="slider-image">
                                 </div>
                                 <div class="slide">
-                                    <img src="img/image.png" alt="Edgewater Residences Amenities" class="slider-image">
+                                    <img src="img/court.png" alt="Outdoor amenity 3" class="slider-image">
                                 </div>
                                 <div class="slide">
-                                    <img src="img/image.png" alt="Edgewater Residences Location" class="slider-image">
+                                    <img src="img/gym.png" alt="Outdoor amenity 4" class="slider-image">
                                 </div>
                                 <div class="slide">
-                                    <img src="img/image.png" alt="Edgewater Residences Views" class="slider-image">
+                                    <img src="img/ew/C_21.jpg" alt="Outdoor amenity 5" class="slider-image">
                                 </div>
                             </div>
-                            <button class="slider-nav-arrow" id="nextSlide">
+                            <button class="slider-nav-arrow" id="amenOutNext">
                                 <img src="img/right-slider.svg" alt="arrow-right">
                             </button>
                         </div>
@@ -474,30 +525,48 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="section-3">
-                <div class="section-3-content">
-                    <div class="section-3-slider">
+
+                <div class="amenities-divider"></div>
+
+                <div class="amenities-icons indoor">
+                    <ul class="amenities-list cols-3">
+                        <li class="amenity">
+                            <img src="img/amenities/playground 1.svg" alt="Kids playing room" class="amenity-icon">
+                            <span class="amenity-label">KIDS PLAYING ROOM</span>
+                        </li>
+                        <li class="amenity">
+                            <img src="img/amenities/weight 2.svg" alt="Gym" class="amenity-icon">
+                            <span class="amenity-label">GYM</span>
+                        </li>
+                        <li class="amenity">
+                            <img src="img/amenities/meeting-room 1.svg" alt="Common room" class="amenity-icon">
+                            <span class="amenity-label">COMMON ROOM</span>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="amenities-block indoor">
+                    <div class="amenities-slider amenities-indoor">
                         <div class="slider-container">
                             <div class="slider-track-reverse">
                                 <div class="slide">
-                                    <img src="img/image1.png" alt="Interior Design 5" class="slider-image">
+                                    <img src="img/interior/living1.jpg" alt="Indoor amenity 1" class="slider-image">
                                 </div>
                                 <div class="slide">
-                                    <img src="img/image1.png" alt="Interior Design 4" class="slider-image">
+                                    <img src="img/interior/living4.jpg" alt="Indoor amenity 2" class="slider-image">
                                 </div>
                                 <div class="slide">
-                                    <img src="img/image1.png" alt="Interior Design 3" class="slider-image">
+                                    <img src="img/interior/bedroom10.jpg" alt="Indoor amenity 3" class="slider-image">
                                 </div>
                                 <div class="slide">
-                                    <img src="img/image1.png" alt="Interior Design 2" class="slider-image">
+                                    <img src="img/interior/bathroom3.jpg" alt="Indoor amenity 4" class="slider-image">
                                 </div>
-                                <div class="slide active">
-                                    <img src="img/image1.png" alt="Interior Design 1" class="slider-image">
+                                <div class="slide">
+                                    <img src="img/interior/living7.jpg" alt="Indoor amenity 5" class="slider-image">
                                 </div>
                             </div>
-                            <button class="slider-nav-arrow-reverse" id="prevSlide">
-                                <img src="img/left-slider.svg" alt="arrow-left">
+                            <button class="slider-nav-arrow" id="amenInNext">
+                                <img src="img/right-slider.svg" alt="arrow-right">
                             </button>
                         </div>
                         <div class="slider-indicators">
@@ -508,10 +577,10 @@
                             <div class="indicator active" data-slide="4"></div>
                         </div>
                     </div>
-                    <div class="section-3-text">
+                    <div class="amenities-text">
                         <div class="vertical-text">
-                            <h3 class="text-main">INTERIOR</h3>
-                            <p class="text-sub">project</p>
+                            <h3 class="text-main">INDOOR</h3>
+                            <p class="text-sub">spaces</p>
                         </div>
                     </div>
                 </div>
