--- a/index.html
+++ b/index.html
@@ -497,19 +497,19 @@
                         <div class="slider-container">
                             <div class="slider-track">
                                 <div class="slide">
-                                    <img src="img/pool.png" alt="Outdoor amenity 1" class="slider-image">
+                                    <img src="img/outdoor/1.png" alt="Outdoor amenity 1" class="slider-image">
                                 </div>
                                 <div class="slide">
-                                    <img src="img/playground.png" alt="Outdoor amenity 2" class="slider-image">
+                                    <img src="img/outdoor/2.png" alt="Outdoor amenity 2" class="slider-image">
                                 </div>
                                 <div class="slide">
-                                    <img src="img/court.png" alt="Outdoor amenity 3" class="slider-image">
+                                    <img src="img/outdoor/3.png" alt="Outdoor amenity 3" class="slider-image">
                                 </div>
                                 <div class="slide">
-                                    <img src="img/gym.png" alt="Outdoor amenity 4" class="slider-image">
+                                    <img src="img/outdoor/4.png" alt="Outdoor amenity 4" class="slider-image">
                                 </div>
                                 <div class="slide">
-                                    <img src="img/ew/C_21.jpg" alt="Outdoor amenity 5" class="slider-image">
+                                    <img src="img/outdoor/5.png" alt="Outdoor amenity 5" class="slider-image">
                                 </div>
                             </div>
                             <button class="slider-nav-arrow" id="amenOutNext">
@@ -550,31 +550,23 @@
                         <div class="slider-container">
                             <div class="slider-track-reverse">
                                 <div class="slide">
-                                    <img src="img/interior/living1.jpg" alt="Indoor amenity 1" class="slider-image">
+                                    <img src="img/indoor/01_View020000.png" alt="Indoor amenity 1" class="slider-image">
                                 </div>
                                 <div class="slide">
-                                    <img src="img/interior/living4.jpg" alt="Indoor amenity 2" class="slider-image">
+                                    <img src="img/indoor/01_View04.png" alt="Indoor amenity 2" class="slider-image">
                                 </div>
                                 <div class="slide">
-                                    <img src="img/interior/bedroom10.jpg" alt="Indoor amenity 3" class="slider-image">
-                                </div>
-                                <div class="slide">
-                                    <img src="img/interior/bathroom3.jpg" alt="Indoor amenity 4" class="slider-image">
-                                </div>
-                                <div class="slide">
-                                    <img src="img/interior/living7.jpg" alt="Indoor amenity 5" class="slider-image">
+                                    <img src="img/indoor/e_View030000.png" alt="Indoor amenity 3" class="slider-image">
                                 </div>
                             </div>
-                            <button class="slider-nav-arrow" id="amenInNext">
-                                <img src="img/right-slider.svg" alt="arrow-right">
+                            <button class="slider-nav-arrow-reverse" id="amenInPrev">
+                                <img src="img/left-slider.svg" alt="arrow-left">
                             </button>
                         </div>
                         <div class="slider-indicators">
                             <div class="indicator" data-slide="0"></div>
                             <div class="indicator" data-slide="1"></div>
-                            <div class="indicator" data-slide="2"></div>
-                            <div class="indicator" data-slide="3"></div>
-                            <div class="indicator active" data-slide="4"></div>
+                            <div class="indicator active" data-slide="2"></div>
                         </div>
                     </div>
                     <div class="amenities-text">
