--- a/index.html
+++ b/index.html
@@ -577,6 +577,57 @@
                     </div>
                 </div>
             </section>
+            <section class="section-building">
+                <div class="building-content">
+                    <div class="building-left">
+                        <h2 class="building-title">BUILDING</h2>
+                        <p class="building-text">Premium collection of semi fitted apartments with high-quality <span class="text-bold">BOSCH</span> kitchen appliances. Top-floor apartments will offer stunning sea views and golf courses from the 5th floor.</p>
+                        <div class="building-stats">
+                            <div class="building-stat">
+                                <div class="stat-number">3</div>
+                                <div class="stat-label">towers</div>
+                            </div>
+                            <div class="building-stat">
+                                <div class="stat-number">12</div>
+                                <div class="stat-label">residential <br> floors per each</div>
+                            </div>
+                            <div class="building-stat">
+                                <div class="stat-number">2</div>
+                                <div class="stat-label">podium <br> floors</div>
+                            </div>
+                        </div>
+                        <div class="building-image">
+                            <img src="img/amenities/discuss.png" alt="Building interior" />
+                        </div>
+                    </div>
+                    <div class="building-right">
+                        <h2 class="unit-title">UNIT TYPES</h2>
+                        <div class="unit-list">
+                            <div class="unit-item">
+                                <div class="unit-name">1 BR APARTMENT</div>
+                                <div class="unit-range">from 646 to 747 sq.ft — <span class="unit-price">Starting Price 1.68M AED</span></div>
+                            </div>
+                            <div class="unit-divider"></div>
+                            <div class="unit-item">
+                                <div class="unit-name">2 BR APARTMENT</div>
+                                <div class="unit-range">from 1,087 to 1,262 sq.ft — <span class="unit-price">Starting Price 2.56M AED</span></div>
+                            </div>
+                            <div class="unit-divider"></div>
+                            <div class="unit-item">
+                                <div class="unit-name">3 BR APARTMENT</div>
+                                <div class="unit-range">from 1,535 to 1,576 sq.ft — <span class="unit-price">Starting Price 3.26M AED</span></div>
+                            </div>
+                        </div>
+                        <div class="handover">
+                            <div class="handover-label">HANDOVER:</div>
+                            <div class="handover-value">Q4 2026</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="building-cta">
+                    <button class="cta-contact-us">CONTACT US</button>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="footer-content">
