--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                 <div class="future-header">
                     <h2 class="future-title">DUBAI ISLANDS — THE NEXT</h2>
                     <p class="future-subtitle">icon of Dubai</p>
-                    <p class="future-text"><span class="future-text-bold">Dubai Islands</span> — luxurious 73-square-kilometer waterfront development by Nakheel Properties, the creator of Dubai's Palm Islands. This exclusive destination redefines the urban seascape designed for connected living, from a vibrant waterfront lifestyle and marina to premium beachfront living, championship golf courses, and ultra-luxury villas.</p>
+                    <p class="future-text"><span class="future-text-bold">Dubai Islands</span> — a luxurious 17-square-kilometer waterfront development by Nakheel Properties, the creator of Palm Jumeirah. This exclusive destination features five unique islands designed for a refined lifestile, from a vibrant cultural hub and marina to premium beachfront living, championship golf courses, and ultra-luxury villas.</p>
                 </div>
                 <div class="future-image">
                     <img src="img/future.png" alt="Dubai Islands future" />
@@ -610,12 +610,12 @@
                             <div class="unit-divider"></div>
                             <div class="unit-item">
                                 <div class="unit-name">2 BR APARTMENT</div>
-                                <div class="unit-range">from 1,087 to 1,262 sq.ft — <span class="unit-price">Starting Price 2.56M AED</span></div>
+                                <div class="unit-range">from 1,087 to 1,262 sq.ft — <span class="unit-price">Starting Price 2.50M AED</span></div>
                             </div>
                             <div class="unit-divider"></div>
                             <div class="unit-item">
                                 <div class="unit-name">3 BR APARTMENT</div>
-                                <div class="unit-range">from 1,535 to 1,576 sq.ft — <span class="unit-price">Starting Price 3.26M AED</span></div>
+                                <div class="unit-range">from 7,533 to 3,576 sq.ft — <span class="unit-price">Starting Price 3.25M AED</span></div>
                             </div>
                         </div>
                         <div class="handover">
