--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="icon" href="fav.svg" type="image/svg+xml">
+    <title>Edgewater Residences</title>
     <script src="script.js" defer></script>
 </head>
 <body>
