--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a class="menu-item" href="#projects">projects</a>
                 <a class="menu-item" href="#amenities">Amenities</a>
                 <a class="menu-item" href="#location">location</a>
-                <button class="contact-us">Contact us</button>
+                <button class="contact-us" onclick="window.location.href='tel:+97145752978'">Contact us</button>
             </div>
 
             <nav class="mobile-menu" aria-hidden="true">
@@ -411,7 +411,7 @@
                     </div>
                 </div>
                 <div class="location-button">
-                    <button class="google-maps-btn">OPEN IN GOOGLE MAPS</button>
+                    <button class="google-maps-btn" onclick="window.open('https://www.google.com/maps/place/EDGEWATER+RESIDENCES+-+Dubai+Islands+-+Front+-+Dubai/@25.3004759,55.2976901,17z/data=!4m11!1m4!11m3!2scHs0PfiMTCagXT8qF6_4kg!3e3!4sPYDWuxqiI9c!3m5!1s0x3e5f452ead098227:0x940290eae34045fc!8m2!3d25.3004759!4d55.2976901!16s%2Fg%2F11w2grzlmr', '_blank', 'noopener,noreferrer')">OPEN IN GOOGLE MAPS</button>
                 </div>
             </section>
             <section class="section-future">
