--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                 <div class="amenities-icons indoor">
                     <ul class="amenities-list cols-3">
                         <li class="amenity">
-                            <img src="img/amenities/playground 1.svg" alt="Kids playing room" class="amenity-icon">
+                            <img src="img/amenities/cubes 1.svg" alt="Kids playing room" class="amenity-icon">
                             <span class="amenity-label">KIDS PLAYING ROOM</span>
                         </li>
                         <li class="amenity">
